fixed the unaligned card metrics section

--- a/css/agentdashboard.css
+++ b/css/agentdashboard.css
@@ -292,7 +292,7 @@ select {
 
 .metricCardContainer {
   display: flex;
-  gap: 10px;
+  justify-content: space-around;
   margin-top: 80px;
 }
 
